--- a/custom-ui-splitscape/tsconfig.json
+++ b/custom-ui-splitscape/tsconfig.json
@@ -12,15 +12,16 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true,
     "esModuleInterop": true,
     "allowJs": true,
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "kindeSrc/*": ["./kindeSrc/*"]
     }
   },
-  "include": ["src", "kindeSrc", "vite.config.ts"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": ["kindeSrc", "next.config.js"],
+  "exclude": ["node_modules"]
 }
