--- a/custom-ui-splitscape/package.json
+++ b/custom-ui-splitscape/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "next dev -p 5174",
+    "dev": "next dev -p 5174 --webpack",
     "build": "next build",
     "start": "next start",
     "test": "echo \"Error: no test specified\" && exit 1"
